fix: prevent horizontal overflow in side panel tab content

--- a/src/app/components/side-panel/side-panel.component.scss
+++ b/src/app/components/side-panel/side-panel.component.scss
@@ -87,6 +87,10 @@ mat-tab-group {
 ::ng-deep .mat-mdc-tab-body-wrapper {
   flex: 1;
   min-height: 0;
+
+  .mat-mdc-tab-body-content {
+    overflow-x: hidden;
+  }
 }
 
 
